Never timeout network notifications users initiated

Previously network notifications are disappeared after
timeout, but it confused the user. Especially, on OOBE
flow, there was no way to reshow the notification since
the message center doesn't exist.

This cl removes the timeout and make the notifications
showing until users hide them.

Bug: 786308
Test: manual test
Change-Id: I6b5aeee14ccc99a35b0ae75ff29c46400168e945